@@ -1,3 +1,11 @@
+Wed Dec 11 16:45:58 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* eval.c (rb_raise_jump): call c_return hook immediately after
+	  popping `raise' frame.
+	  Patches by deivid (David Rodriguez). [Bug #8886]
+
+	* test/ruby/test_settracefunc.rb: catch up this fix.
+
 Wed Dec 11 16:01:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (rb_hash_reject): return a plain hash, without copying
